        * Using NULL during an INSERT for the AUTO_INCREMENT column does not
          work very well outside of MySQL. Pass the correct number of arguments
          to the INSERT instead.

        * Clean up all raw usages of UNIX_TIMETAMP() function, in preparation
          for database independence. If you need the unix timestamp, include the output
          of $self->unix_timestamp directly into your query.

        * Append the mogstored job type to $0 instead of replacing it entirely.

        * Alter $0 so that the scripts show up as '$SCRIPTNAME' in the process
          listing instead of '/usr/bin/perl $SCRIPTNAME'. This makes init.d
          scripts easier to manage.

        * make mogstored's lighttpd config use mod_status for "/", so
          mogadm doesn't think it's dead when it previously saw a 404
          (Justin Huff <jjhuff@mspin.net>)

        * remove Linux::AIO support, now that Perlbal has removed it as well,
          and because Linux::AIO support (when Perlbal then chooses
          IO::AIO) was hanging mogstored on shutdown.  so also add a
          mogstored shutdown test (after a full daemonization of it)

        * make Mgd::validate_dbh() re-check/ping slave dbhs as well.
          (problem mentioned by Steven Shou <steven.shou@verizon.net>)

        * support drive identifiers above sdz (Arjan <info@bouncetek.com>)

        * make mogstored's iostat child process properly shutdown,
          even when iostat binary isn't installed.  (previously
          it was stuck in a loop every 10 seconds, hoping for
          iostat to be installed, but never respecting parent
          process' death)

        * Change delete worker to use new DeviceStates interface.

        * Fix get_paths to honor new device state of 'drain' via new
          DeviceStates interface.

        * use signifigantly less CPU when re-broadcasting around
          iostat device utilization% to child processes.  (future: